<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2">

    <EditText
        android:id="@+id/locationInput"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/enter_location"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LocationText" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="82dp"
        android:layout_height="22dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="8dp"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@+id/dateInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInput" />

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/enter_date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/LocationText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <TextView
        android:id="@+id/LocationText"
        android:layout_width="83dp"
        android:layout_height="26dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="8dp"
        android:text="Location:"
        app:layout_constraintBottom_toTopOf="@+id/locationInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateInput" />


    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/dateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />


    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="81dp"
        android:layout_height="24dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="8dp"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/descriptionInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput" />

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/descriptionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneText" />

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="82dp"
        android:layout_height="23dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="4dp"
        android:text="@string/phone"
        app:layout_constraintBottom_toTopOf="@+id/phoneInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameInput" />

    <TextView
        android:id="@+id/postTypeText"
        android:layout_width="91dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/post_type"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/NameText"
        app:layout_constraintEnd_toStartOf="@+id/LostRadioButton"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/FoundRadioButton"
        android:layout_width="77dp"
        android:layout_height="26dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="4dp"
        android:text="@string/found"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/NameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/LostRadioButton"
        android:layout_width="75dp"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="32dp"
        android:text="@string/lost"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/NameText"
        app:layout_constraintEnd_toStartOf="@+id/FoundRadioButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />

    <EditText
        android:id="@+id/NameInput"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/phoneText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameText" />

    <TextView
        android:id="@+id/NameText"
        android:layout_width="83dp"
        android:layout_height="24dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="4dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/NameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postTypeText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="113dp"
        android:layout_height="62dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="28dp"
        android:text="@string/save"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationInput" />

    <Button
        android:id="@+id/currentLocationButton"
        android:layout_width="173dp"
        android:layout_height="61dp"
        android:text="GET CURRENT LOCATION"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationInput" />
</androidx.constraintlayout.widget.ConstraintLayout>